# llm_engineering

./: pyproject.toml
week1/: day1.ipynb  day2 EXERCISE.ipynb
