[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "gradio>=5.39.0",
    "langchain>=0.3.27",
    "notebook>=7.4.4",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "tqdm>=4.67.1",
]
